--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -10,3 +10,4 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.js"
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <!-- APP JS -->
     <script src="/scripts/dashboard.js"></script>
+    <script src="/scripts/index.js"></script>
