--- a/views/admin/tv/edit-channel.ejs
+++ b/views/admin/tv/edit-channel.ejs
@@ -33,8 +33,8 @@
                     }
                 </script>
                 <div class="form-outline mt-3">
-                    <input type="url" name="m3u8_link" value="<%= channel.link %>" id="form7Example1" class="form-control" required/>
-                    <label class="form-label" for="form7Example1">Channel m3u8 link *</label>
+                    <input type="url" name="m3u8_link" value="<%= channel.link %>" id="form7Example1" class="form-control" />
+                    <label class="form-label" for="form7Example1">Channel m3u8 link </label>
                   </div>
 
                 <div class="mt-3">
@@ -48,10 +48,16 @@
                     <select id="country" class="py-2 px-4" onchange="update();"
                         style="width: 100%; outline: black">
                         <option class="py-2 px-5">Channel Category *</option>
-                        <option class="py-2 px-5" value="Sports" <%= channel.category == 'Sports' ? 'selected' : '' %>>Sports</option>
-                        <option class="py-2 px-5" value="Movies" <%= channel.category == 'Movies' ? 'selected' : '' %>>Movies</option>
-                        <option class="py-2 px-5" value="News" <%= channel.category == 'News' ? 'selected' : '' %>>News</option>
-                        <option class="py-2 px-5" value="Cartoon" <%= channel.category == 'Cartoon' ? 'selected' : '' %>>Cartoon</option>
+                        <option class="py-2 px-5" value="ZEE NETWORKS" <%= channel.category == 'ZEE NETWORKS' ? 'selected' : '' %>>ZEE NETWORKS</option>
+                        <option class="py-2 px-5" value="ENTERTAINMENT" <%= channel.category == 'ENTERTAINMENT' ? 'selected' : '' %>>ENTERTAINMENT</option>
+                        <option class="py-2 px-5" value="MUSIC" <%= channel.category == 'MUSIC' ? 'selected' : '' %>>MUSIC</option>
+                        <option class="py-2 px-5" value="MOVIES" <%= channel.category == 'MOVIES' ? 'selected' : '' %>>MOVIES</option>
+
+                        <option class="py-2 px-5" <%= channel.category == 'NEWS' ? 'selected' : '' %> value="NEWS">NEWS</option>
+                        <option class="py-2 px-5" <%= channel.category == 'SSPORTS' ? 'selected' : '' %> value="SPORTS">SPORTS</option>
+                        <option class="py-2 px-5" <%= channel.category == 'RELIGIOUS' ? 'selected' : '' %> value="RELIGIOUS">RELIGIOUS</option>
+                        <option class="py-2 px-5" <%= channel.category == 'INFOTAINMENT' ? 'selected' : '' %> value="INFOTAINMENT">INFOTAINMENT</option>
+
                     </select>
                     <input id="category" name="category" value="<%= channel.category %>" class="d-none" >
                 </div>
@@ -63,6 +69,11 @@
                     <label for="flexCheckDefault2">From Youtube</label>
                     <input name="youtube" class="form-check-input mx-2"<%= channel.youtube == 'on' ? 'checked' : '' %> type="checkbox" id="flexCheckDefault2" />
                 </div>
+
+                <div class="form-outline mt-3">
+                    <input type="text" name="youtube_link" value="<%= channel.youtube_link %>" id="form7Example1" class="form-control"/>
+                    <label class="form-label" for="form7Example1">Youtube Link</label>
+                  </div>
 
                 <div class="mt-3">
                     <script>
