--- a/views/partials/header/head.ejs
+++ b/views/partials/header/head.ejs
@@ -11,20 +11,20 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.css" rel="stylesheet" />
-    <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-    />
+    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <!-- Fantasy -->
+    <link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
+
     <!-- Main CSS -->
-    
+
     <link rel="stylesheet" href="/styles/tv.css">
     <link rel="stylesheet" href="/styles/alert.css">
     <link rel="stylesheet" href="/styles/style.css">
-    <title>SR TV Server</title>
+    <title>ISP LIVE TV</title>
 </head>
 
 <body>
 
-    <%- include('../navbar.ejs')  %>
-    <%- include('../alert.ejs')  %>
+    <%- include('../navbar.ejs') %>
+        <%- include('../alert.ejs') %>
